--- a/form4/index.html
+++ b/form4/index.html
@@ -23,7 +23,11 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- Startup 3 CSS (Styles for all blocks) -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image x-icon" href="https://raw.githubusercontent.com/ezequielsousa-devbr/formularios/main/form4/icon/bootstrap.png">
+
   <!-- jQuery 3.3.1 -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
